[package]
name = "e"
version = "0.1.0"
authors = ["cherry"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
tree-sitter = "0.19.3"
ropey = "1.2.0"
mlua = { version = "0.5.3", features = ["luajit", "vendored"] }
libloading = "0.7.0"

[build-dependencies]
cc="*"